Refactoring RT module and use fractional overlay for RTDose